# newPlatform

./: .gitignore  BzfPlatform.cxx  BzfPlatform.h  CMakeLists.txt  GLFWPlatform.cxx  GLFWPlatform.h  GLHelloWorld.cxx  GLHelloWorld.h  SDL2Platform.cxx  SDL2Platform.h  main.cxx
shaders/: ldfGWn.frag
